add html structure

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,10 +1,15 @@
-<main class="page__main">
-  <h2>Este es el starter kit de Adalab</h2>
-  <p>Lo usamos para aprender:</p>
-  <ul class="main__list">
-    <li>Sass</li>
-    <li>HTML partials</li>
-    <li>Gulp</li>
-    <li>y muchas cosas más</li>
-  </ul>
+<main class="main">
+  <h1 class="title">Buscador de series</h1>
+  <form action="#">
+    <input
+      type="text"
+      name="search-input"
+      id="search-input"
+      class="search-input js-search-input"
+    />
+    <input type="button" value="Search" class="search-button" />
+  </form>
+  <h2 class="my-favorite-series">Mis series favoritas</h2>
+  <div class="container__favorite-series js-container__favorite-series"></div>
+  <div class="container__result-search js-container-result-search"></div>
 </main>
