--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -1,3 +1,7 @@
-.main__list {
-  padding-left: 2rem;
+.container__favorite-series,
+.container__result-search {
+  border: solid 1px #fabada;
+  width: 300px;
+  height: 300px;
+  display: inline-block;
 }
