add first js code

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -7,9 +7,21 @@
       id="search-input"
       class="search-input js-search-input"
     />
-    <input type="button" value="Search" class="search-button" />
+    <input type="button" value="Search" class="js-search-button" />
   </form>
   <h2 class="my-favorite-series">Mis series favoritas</h2>
-  <div class="container__favorite-series js-container__favorite-series"></div>
-  <div class="container__result-search js-container-result-search"></div>
+  <div class="container__favorite-series js-container__favorite-series">
+    <h3 class="favorite-series-name">Mi serie favorita</h3>
+    <li class="js-favorite-serie-image">
+      <img src="#" alt="my favorite series" />
+    </li>
+  </div>
+  <div class="container__results-search js-container-result">
+    <!--   <div class="js-info-of-my-serie info-of-my-serie">
+      <li class="js-results">
+        <img src="#" alt="" />
+      </li>
+      <h3 class="js-name-series">nova</h3>
+    </div> -->
+  </div>
 </main>
