--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -1,7 +1,17 @@
-.container__favorite-series,
-.container__result-search {
+.container__favorite-series {
   border: solid 1px #fabada;
   width: 300px;
   height: 300px;
   display: inline-block;
+}
+.container__results-search {
+  border: solid 1px #fabada;
+  width: 900px;
+  height: 600px;
+  display: inline-block;
+}
+.info-of-my-serie {
+  border: solid 1px green;
+  width: 100px;
+  height: 100px;
 }
