add funstions paint

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -17,11 +17,13 @@
     </li>
   </div>
   <div class="container__results-search js-container-result">
-    <!--   <div class="js-info-of-my-serie info-of-my-serie">
-      <li class="js-results">
-        <img src="#" alt="" />
-      </li>
-      <h3 class="js-name-series">nova</h3>
-    </div> -->
+    <ul class="js-list-of-series">
+      <!--  <li class="js-results">
+        <div class="js-info-of-my-serie info-of-my-serie">
+          <img class="image card" src="#" alt="" />
+          <h3 class="js-name-series">nova</h3>
+        </div>
+      </li> -->
+    </ul>
   </div>
 </main>
