--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -31,3 +31,9 @@
   width: 186px;
   height: 261px;
 }
+
+///////////////////////////////////////////////////
+
+.red {
+  background-color: red;
+}
