--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -10,12 +10,7 @@
     <input type="button" value="Search" class="js-search-button" />
   </form>
   <h2 class="my-favorite-series">Mis series favoritas</h2>
-  <div class="container__favorite-series js-container__favorite-series">
-    <h3 class="favorite-series-name">Mi serie favorita</h3>
-    <li class="js-favorite-serie-image">
-      <img src="#" alt="my favorite series" />
-    </li>
-  </div>
+  <div class="container__favorite-series js-container__favorite-series"></div>
   <div class="container__results-search js-container-result">
     <ul class="js-list-of-series">
       <!--  <li class="js-results">
