--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -3,18 +3,19 @@
   width: 300px;
   height: 300px;
   position: fixed;
+  display: flex;
+  flex-wrap: wrap;
 }
 .container__results-search {
   position: fixed;
   top: auto;
   left: 360px;
+  display: flex;
+  flex-wrap: wrap;
+  overflow-y: auto;
   border: solid 1px #fabada;
   width: 900px;
   height: 800px;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  overflow-y: auto;
 }
 .info-of-my-serie {
   background-color: #fabada;
@@ -36,4 +37,23 @@
 
 .red {
   background-color: red;
+}
+
+.js-width-image {
+  margin: 2px;
+  width: 46.5px;
+  height: 65.25px;
+}
+.js-width-info-of-my-serie {
+  background-color: #baf8fa;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 56px;
+  height: 92px;
+  margin: 2px 4px;
+}
+.js-font {
+  font-size: 11px;
 }
