--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,24 +1,19 @@
 <main class="main">
   <h1 class="title">Buscador de series</h1>
   <form action="#">
-    <input
-      type="text"
-      name="search-input"
-      id="search-input"
-      class="search-input js-search-input"
-    />
+    <input type="text" name="search-input" id="search-input" class="search-input js-search-input" />
     <input type="button" value="Search" class="js-search-button" />
   </form>
   <h2 class="my-favorite-series">Mis series favoritas</h2>
   <div class="container__favorite-series js-container__favorite-series"></div>
   <div class="container__results-search js-container-result">
-    <ul class="js-list-of-series">
+    <ul class="js-ul-list-of-series">
       <!--  <li class="js-results">
-        <div class="js-info-of-my-serie info-of-my-serie">
-          <img class="image card" src="#" alt="" />
-          <h3 class="js-name-series">nova</h3>
-        </div>
-      </li> -->
+          <div class="js-info-of-my-serie info-of-my-serie">
+            <img class="image card" src="#" alt="" />
+            <h3 class="js-name-series">nova</h3>
+          </div>
+        </li> -->
     </ul>
   </div>
 </main>
