--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -55,3 +55,14 @@
 .js-font {
   font-size: 11px;
 }
+.button-remove {
+  border: 2px black solid;
+  border-radius: 100px;
+  width: 18px;
+  height: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  margin: 5px;
+}
