--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -38,9 +38,11 @@
 }
 
 .js-width-image {
-  margin: 2px;
-  width: 46.5px;
-  height: 65.25px;
+  position: relative;
+  top: 10px;
+  margin: 1px;
+  width: 40.5px;
+  height: 54.25px;
 }
 .js-width-info-of-my-serie {
   background-color: #baf8fa;
@@ -48,12 +50,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 56px;
+  width: 62px;
   height: 92px;
   margin: 2px 4px;
 }
 .js-font {
-  font-size: 11px;
+  font-size: 9px;
+  margin: 3px;
+  list-style: none;
 }
 .button-remove {
   border: 2px black solid;
