--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -1,21 +1,16 @@
 .container__favorite-series {
   border: solid 1px #fabada;
-  width: 300px;
-  height: 300px;
-  position: fixed;
+  width: 100%;
+  height: 200px;
   display: flex;
-  flex-wrap: wrap;
+  justify-content: center;
+  overflow: auto;
 }
 .container__results-search {
-  position: fixed;
-  top: auto;
-  left: 360px;
   display: flex;
-  flex-wrap: wrap;
-  overflow-y: auto;
-  border: solid 1px #fabada;
-  width: 900px;
-  height: 800px;
+  overflow: auto;
+  width: 100%;
+  height: 400px;
 }
 .info-of-my-serie {
   background-color: #fabada;
@@ -26,6 +21,7 @@
   width: 230px;
   height: 325px;
   margin: 5px 10px;
+  overflow: hidden;
 }
 .image-card {
   margin: 5px;
@@ -69,4 +65,18 @@
   align-items: center;
   font-weight: bold;
   margin: 5px;
+}
+
+.title {
+  font-size: 25px;
+  text-align: center;
+}
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.js-li-results {
+  display: inline-block;
 }
