--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -6,6 +6,7 @@
   </form>
   <h2 class="my-favorite-series">Mis series favoritas</h2>
   <div class="container__favorite-series js-container__favorite-series"></div>
+  <p class="message"></p>
   <div class="container__results-search js-container-result">
     <ul class="js-ul-list-of-series">
       <!--  <li class="js-results">
